5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1646_652.log
== TEST (2019-04-21 14:38:18) 
-- CODE:
n = int(input("Numero inteiro: "))
if((n%100)%n==0):
	print("SIM")
else:
	print("NAO")
	
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-21 14:42:49) 
-- CODE:
n = int(input("Numero inteiro: "))
if(((n/100)%10)%n==0):
	print("SIM")
else:
	print("NAO")
	
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-21 14:42:58) 
-- CODE:
n = int(input("Numero inteiro: "))
if(((n/100)%10)%n==0):
	print("SIM")
else:
	print("NAO")
	
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-21 14:43:22) 
-- CODE:
n = int(input("Numero inteiro: "))
if(((n/100)%n==0):
	print("SIM")
else:
	print("NAO")
	
-- ERROR:
File "XXXX", line 2
    if(((n/100)%n==0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-21 14:43:37) 
-- CODE:
n = int(input("Numero inteiro: "))
if((n/100)%n==0):
	print("SIM")
else:
	print("NAO")
	
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:31:36) 
-- CODE:
n = int(input("Numero inteiro: "))
if(n/(n%100)==0):
	print("SIM")
else:
	print("NAO")
	
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:32:34) 
-- CODE:
n = int(input("Numero inteiro: "))
if(n%(n%100)==0):
	print("SIM")
else:
	print("NAO")
	
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:32:42) 
-- CODE:
n = int(input("Numero inteiro: "))
if(n%(n%100)==0):
	print("SIM")
else:
	print("NAO")
	
-- EXECUTION TIME:
0.142288
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
